# epauto

./: .editorconfig  Dockerfile  LICENSE  README.md  config.toml  pyproject.toml
src/epauto/: __init__.py  __main__.py  bootstrap.py  config.py
src/epauto/lib/: base.py  jsonp.py  request.py
src/epauto/loop/: __init__.py  check.py  connect.py  login.py  state.py
